# animated-garbanzo

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml  diesel.toml  docker-compose.yml  road.md
migrations/2022-01-05-152833_initial_db/: down.sql  up.sql
src/: main.rs
src/controller/: mod.rs  status.rs
src/controller/v1/: folders.rs  housings.rs  mod.rs  projects.rs
src/entity/: addresses.rs  folders.rs  housings.rs  projects.rs
src/service/: addresses.rs  folders.rs  housings.rs  mod.rs  projects.rs
src/utils/: mod.rs  role.rs  schema.rs
