[package]
name = "server-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# server web et swagger
rocket = "0.5.0-rc.1"
rocket_okapi = { version = "0.8.0-rc.1", features=["swagger","rapidoc"]}
schemars = { version = "0.8.8", features = ["bigdecimal"] }
# sérialisation/décerialisation JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# ORM et moteur de base de données
diesel = { version = "1.4.8", features = ["postgres", "numeric"] }
diesel-derive-enum = { version = "1.1.2", features = ["postgres"] }
bigdecimal = {version = "0.1.2", features = ["serde"] }
# handler erreur simplifier
anyhow = "1.0.44"
# requette http
reqwest = { version = "0.11", features = ["json"] }
# regex 
regex = "1"
# runtime async
tokio = { version = "1", features = ["full"] }

# gestion db engine
[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_postgres_pool"]